--- a/arts/templates/upload.html
+++ b/arts/templates/upload.html
@@ -1,6 +1,6 @@
-<h1>Upload Artwork</h1>
+<h1>your artwork here</h1>
 <form method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Upload</button>
+  <button type="submit">go!</button>
 </form>
