--- a/arts/static/css/styles.css
+++ b/arts/static/css/styles.css
@@ -29,3 +29,30 @@
 .social-icons i {
   font-size: 20px;
 }
+
+.link-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.link-container a {
+  margin-bottom: 10px;
+}
+
+.artwork-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.artwork-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+.artwork-item h2 {
+  margin-bottom: 5px;
+}
