--- a/arts/templates/base.html
+++ b/arts/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>Your Website Title</title>
+    <title>The Art Thingy</title>
 
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-BD98V96a2uVHxvzZXMZyVK9DoGTbOsEEmLPB+xCAdmKyRYiC95X0oIs8swTvdzL/+ay5XpIqWIl4h6EerCLCgA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -12,10 +12,10 @@
 
     <nav>
         <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'upload' %}">Upload</a></li>
-            <li><a href="{% url 'gallery' %}">Gallery</a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
+            <li><a href="{% url 'home' %}">homepage</a></li>
+            <li><a href="{% url 'upload' %}">your work</a></li>
+            <li><a href="{% url 'gallery' %}">my work</a></li>
+            <li><a href="{% url 'contact' %}">get in touch!</a></li>
         </ul>
     </nav>
 
