--- a/arts/templates/contact.html
+++ b/arts/templates/contact.html
@@ -5,6 +5,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Send Message</button>
+    <button type="submit">get in touch</button>
   </form>
 {% endblock %}
