--- a/arts/templates/search_results.html
+++ b/arts/templates/search_results.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Search Results</h1>
-  <p>Showing results for: {{ query }}</p>
+  <h1>what we offer</h1>
+  <p>you searched : {{ query }}</p>
 
-  <!-- Render the search results here -->
-  <ul>
-    {% for result in search_results %}
-      <li>{{ result.title }}</li>
-    {% endfor %}
-  </ul>
-
+  {% if artworks %}
+    <div class="search-results">
+      {% for artwork in artworks %}
+        <img src="{{ artwork.image.url }}" alt="{{ artwork.title }}" class="artwork-image">
+        <p>Title: {{ artwork.title }}</p>
+      {% endfor %}
+    </div>
+  {% else %}
+    <p>Nothing here yet :(</p>
+  {% endif %}
 {% endblock %}
